// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiHeaderBreadcrumbs is rendered 1`] = `
<nav
  aria-label="aria-label"
  class="ouiBreadcrumbs ouiHeaderBreadcrumbs testClass1 testClass2 ouiBreadcrumbs--truncate"
  data-test-subj="test subject string"
>
  <div
    class="ouiBreadcrumbWall"
  >
    <div
      class="ouiBreadcrumbWrapper ouiBreadcrumbWrapper--first"
    >
      <a
        class="ouiLink ouiLink--subdued ouiBreadcrumb customClass"
        data-test-subj="breadcrumbsAnimals"
        href="#"
        rel="noreferrer"
      >
        Animals
      </a>
    </div>
  </div>
  <div
    class="ouiBreadcrumbWrapper"
  >
    <button
      class="ouiLink ouiLink--subdued ouiBreadcrumb"
      type="button"
    >
      Reptiles
    </button>
  </div>
  <div
    class="ouiBreadcrumbWrapper"
  >
    <a
      class="ouiLink ouiLink--subdued ouiBreadcrumb"
      href="#"
      rel="noreferrer"
    >
      Boa constrictor
    </a>
  </div>
  <div
    class="ouiBreadcrumbWrapper ouiBreadcrumbWrapper--last"
  >
    <span
      aria-current="page"
      class="ouiBreadcrumb ouiBreadcrumb--last"
    >
      Edit
    </span>
  </div>
</nav>
`;

exports[`OuiHeaderBreadcrumbs is rendered with simplified breadcrumbs 1`] = `
<nav
  aria-label="aria-label"
  class="ouiSimplifiedBreadcrumbs ouiHeaderBreadcrumbs ouiHeaderBreadcrumbs--simplified testClass1 testClass2 ouiSimplifiedBreadcrumbs--truncate"
  data-test-subj="test subject string"
>
  <div
    class="ouiSimplifiedBreadcrumbWall"
  >
    <a
      class="ouiLink ouiLink--primary ouiSimplifiedBreadcrumb customClass"
      data-test-subj="breadcrumbsAnimals"
      href="#"
      rel="noreferrer"
    >
      Animals
    </a>
  </div>
  <svg
    class="ouiBreadcrumbSeparator"
    preserveAspectRatio="none"
    viewBox="0 0 8 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 12H0L6 0h2z"
      fill="currentColor"
    />
  </svg>
  <button
    class="ouiLink ouiLink--primary ouiSimplifiedBreadcrumb"
    type="button"
  >
    Reptiles
  </button>
  <svg
    class="ouiBreadcrumbSeparator"
    preserveAspectRatio="none"
    viewBox="0 0 8 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 12H0L6 0h2z"
      fill="currentColor"
    />
  </svg>
  <a
    class="ouiLink ouiLink--primary ouiSimplifiedBreadcrumb"
    href="#"
    rel="noreferrer"
  >
    Boa constrictor
  </a>
  <svg
    class="ouiBreadcrumbSeparator"
    preserveAspectRatio="none"
    viewBox="0 0 8 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 12H0L6 0h2z"
      fill="currentColor"
    />
  </svg>
  <span
    aria-current="page"
    class="ouiSimplifiedBreadcrumb ouiSimplifiedBreadcrumb--last"
  >
    Edit
  </span>
  <svg
    class="ouiBreadcrumbSeparator"
    preserveAspectRatio="none"
    viewBox="0 0 8 12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 12H0L6 0h2z"
      fill="currentColor"
    />
  </svg>
</nav>
`;
